k8s/10-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: accountingweb-container
        image: fs.panga-ghost.ts.net:5443/accountingweb:v3.9
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: app
                    operator: In
                    values:
                    - django-app
                topologyKey: "kubernetes.io/hostname"
